# vtkGetBoundaryFaces

./: CMakeLists.txt  vtkGetBoundaryFaces.pc.in
include/: vtkGetBoundaryFaces.h
src/: vtkGetBoundaryFaces.cxx
